# perm-framework

./: README.md  pyproject.toml  setup.cfg
perm_framework/: __init__.py  framework.py  linearization.py  metrics.py  utils.py  validation_checks.py
pyspark_notebooks/: aa_test_notebook.ipynb  pyspark_notebook.ipynb
